# illico

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.en.md  README.md  docker-compose.yml  illico_app.py  illico_canonicalize.py  illico_chat.py  illico_chat_core.py  illico_compile.py  illico_context.py  illico_crawl_status.py  illico_frontmatter.py  illico_graph.py  illico_index.html  illico_ingest.py  illico_llm.py  illico_single.py  illico_testing.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_app_factory_overrides.py  test_app_single_user.py  test_canonicalize.py  test_chat_core_async.py  test_collection.py  test_compile_canonicalize.py  test_compile_only_domains.py  test_compile_prompts.py  test_context_single_user.py  test_crawl_status.py  test_frontmatter.py  test_graph_aliases.py  test_graph_context.py  test_graph_namespace.py  test_graph_tenant_isolation.py  test_illico_llm.py  test_import_boundary.py  test_ingest_429.py  test_single_frontend.py  test_single_management.py  test_test_boundary.py
